# zkgraph-bnb-hack

./: .flake8  .gitignore  LICENSE  Procfile  README.md  main.py  pyproject.toml
backend/: .env.example  Procfile  README.md  pyproject.toml
backend/backend/: main.py
backend/backend/auth/: auth.py
backend/backend/blockchain/: defender.py  transaction.py
backend/backend/config/: database.py
backend/backend/messages/: proof.py
backend/backend/models/: id.py  proof_request.py  user.py
backend/backend/routes/: proof_requests.py  users.py
backend/backend/routes/api/: proof_requests.py
backend/backend/schemas/: proof_request_schema.py  user_schema.py
backend/backend/services/: proof_requests_service.py  user_service.py  verify_service.py
blockchain/: hardhat.config.ts  package.json
blockchain/contracts/: Escrow.sol  EscrowNative.sol  MockERC20Token.sol
blockchain/scripts/: balance.ts  deploy-escrow.ts  deploy-escrownative.ts  deploy-token.ts  deposit.ts  get-config.ts  lock.ts  locked.ts
blockchain/test/: Escrow.test.ts  EscrowNative.test.ts
onchain_verifier/: Nargo.toml  Prover.toml
onchain_verifier/src/: main.nr
tests/: test_fixed_point.py  test_graph.py  test_mkzg.py  test_poly.py  test_prover.py
tests/assets/: iris_model.onnx  random_polynomial_r_powers_of_tau.ptau  zk_sumcheck_powers_of_tau.ptau
web/: .env.example  package-lock.json  package.json  tailwind.config.ts
web/public/: zerok-worker.sh  zk-worker.sh
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/inference/: route.ts
web/src/app/api/proof_requests/: route.ts
web/src/app/api/user/: route.ts
web/src/app/api/user/api_token/: route.ts
web/src/app/buy/: page.tsx
web/src/app/demo/: page.tsx
web/src/app/profile/: page.tsx
web/src/app/requestProof/: page.tsx
web/src/app/requests/: page.tsx
web/src/app/worker/: page.tsx
web/src/components/: button.tsx  footer.tsx  header.tsx  json-input.tsx  loading.tsx  wallet.tsx
web/src/providers/: all.tsx  chain.tsx
web/src/utils/: auth.ts  json.ts  login.ts
worker/: .env.example  Dockerfile  Procfile  README.md  main.py  pyproject.toml
worker/messages/: request.py
worker/services/: proof_service.py  queue_service.py
zkgraph/circuits/: circuit.py
zkgraph/commitments/mkzg/: mkzg.py
zkgraph/commitments/mkzg/ecc/: __init__.py
zkgraph/graph/: base.py  engine.py  preprocessor.py
zkgraph/ops/: conv.py  elementwise.py  from_onnx.py  gemm.py  onnx_utils.py
zkgraph/polynomials/: field.py  poly.py
zkgraph/prover/: prover.py
zkgraph/transcript/: transcript.py
zkgraph/transcript/merlin/: keccak.py  merlin_transcript.py  strobe.py
zkgraph/types/: gate.py  proof.py
zkgraph/utils/: curve.py  utils.py  visualize.py
zkgraph/verifier/: verifier.py
