[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kevinkons <kevin.kons@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
pymongo = {extras = ["srv"], version = "^4.7.3"}
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
