[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["kevinkons <kevin.kons@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
